<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:gravity="center"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/layout_offer1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="5dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="10dp"
            app:cardElevation="3dp"
            app:cardPreventCornerOverlap="false"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="@string/to_bahria"
                        android:textAppearance="?android:textAppearanceMedium" />

                    <Switch
                        android:id="@+id/routeSwitch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:text="@string/from_bahria"
                        android:textAppearance="?android:textAppearanceMedium" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="5dp"
                        android:src="@drawable/ic_location_on_black_24dp"
                        android:tint="@color/colorAccent" />


                    <android.support.v7.widget.AppCompatAutoCompleteTextView
                        android:id="@+id/pickup"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginStart="5dp"
                        android:background="@drawable/edittext_shape"
                        android:elevation="5dp"
                        android:hint="@string/your_location"
                        android:paddingLeft="16dp"
                        android:textSize="15sp" />


                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"
                    android:rotation="90"
                    android:text="- - >"
                    android:textColor="@color/colorAccent"
                    android:textStyle="bold" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="5dp"
                        android:src="@drawable/ic_directions_black_24dp"
                        android:tint="@color/colorAccent" />

                    <android.support.v7.widget.AppCompatAutoCompleteTextView
                        android:id="@+id/depart"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginStart="5dp"
                        android:background="@drawable/edittext_shape"
                        android:elevation="5dp"
                        android:hint="@string/your_location"
                        android:paddingLeft="16dp"
                        android:textSize="15sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="5dp"
                        android:src="@drawable/ic_access_time_black_24dp"
                        android:tint="@color/colorAccent" />

                    <Spinner
                        android:id="@+id/spinnerTime"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:spinnerMode="dialog"></Spinner>

                </LinearLayout>

                <Button
                    android:id="@+id/button_submit"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="16dp"
                    android:layout_marginTop="16dp"
                    android:alpha="0.80"
                    android:background="@drawable/button_shapes"
                    android:elevation="10dp"
                    android:text="@string/submit"
                    android:textColor="@color/white" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_offer2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="10dp"
            app:cardElevation="3dp"
            app:cardPreventCornerOverlap="false"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="8dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight=".5"
                        android:text="Select Car"
                        android:textStyle="bold"/>

                    <Spinner
                        android:id="@+id/spinner_selectCar"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight=".5" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="8dp"
                    android:layout_marginTop="16dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight=".5"
                        android:text="@string/number_ofSeats"
                        android:textStyle="bold"/>

                    <Spinner
                        android:id="@+id/spinner_seat"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight=".5" />

                </LinearLayout>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/further_detail"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/message"
                    android:layout_margin="8dp"
                    android:padding="6dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/editTextBG"
                    android:gravity="top"
                    android:hint="@string/enterfurther_detail"
                    android:inputType="text|textMultiLine"
                    android:maxHeight="150dp"
                    android:minHeight="50dp" />

                <Button
                    android:id="@+id/button_publish"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:alpha="0.80"
                    android:background="@drawable/button_shapes"
                    android:elevation="10dp"
                    android:text="@string/publish"
                    android:textColor="@color/white" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>

</LinearLayout>