<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/colorAccent">

    <android.support.v7.widget.CardView
        android:id="@+id/cardVew"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardBackgroundColor="@android:color/white"
        app:cardCornerRadius="10dp"
        app:cardElevation="3dp"
        app:cardPreventCornerOverlap="false"
        app:cardUseCompatPadding="true">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:background="@color/colorAccent">

            <ImageView
                android:id="@+id/editPencil"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="5dp"
                android:src="@drawable/ic_edit_black_24dp"
                android:tint="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="7dp"
                android:layout_toRightOf="@+id/editPencil"
                android:text="Edit your phone number"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@color/white" />

            <ImageView
                android:id="@+id/imageView_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:src="@drawable/ic_cancel_black_24dp"
                android:tint="@color/white" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="35dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:padding="10dp"
                android:layout_gravity="center"
                android:layout_marginTop="13dp"
                android:tint="@color/white"
                android:background="@drawable/fullcircle_shape"
                android:src="@drawable/ic_phone_android_black_24dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/changePhone_description1"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@android:color/black"
                android:layout_marginTop="7dp"
                android:layout_marginLeft="13dp"
                android:layout_marginRight="13dp"
                android:layout_gravity="center"
                android:gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/changePhone_description2"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@android:color/black" />


            <EditText
                android:id="@+id/editText_phone"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/edittext_shape"
                android:drawableLeft="@drawable/ic_local_phone_black_24dp"
                android:drawableTint="@color/colorAccent"
                android:drawablePadding="10dp"
                android:elevation="5dp"
                android:layout_marginTop="16dp"
                android:hint="@string/phone"
                android:inputType="phone"
                android:digits="+0123456789"
                android:paddingLeft="8dp"
                android:layout_marginLeft="13dp"
                android:layout_marginRight="13dp"
                android:textSize="15sp" />


            <Button
                android:id="@+id/button_changephone"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:background="@drawable/button_shapes"
                android:elevation="10dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:layout_gravity="center"
                android:text="@string/update" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>