<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="152dp"
        android:background="@color/colorPrimary"
        android:elevation="3dp"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/circle_shape"
            android:padding="10dp"
            android:src="@drawable/signin_logo"
            android:tint="@android:color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/signin"
            android:textColor="@android:color/white"
            android:textSize="22sp" />

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_gravity="center"
        android:layout_marginTop="-10dp"
        android:elevation="3dp"
        android:rotation="45"
        android:src="@drawable/square_shape" />

    <android.support.v7.widget.CardView
        android:id="@+id/cardVew"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        app:cardBackgroundColor="@android:color/white"
        app:cardCornerRadius="10dp"
        app:cardElevation="3dp"
        app:cardPreventCornerOverlap="false"
        app:cardUseCompatPadding="true">


        <EditText
            android:id="@+id/editText_email"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignParentTop="true"
            android:layout_margin="20dp"
            android:background="@drawable/edittext_shape"
            android:drawableLeft="@drawable/ic_action_email"
            android:drawableStart="@drawable/ic_action_email"
            android:drawablePadding="10dp"
            android:elevation="5dp"
            android:hint="@string/phone"
            android:inputType="textEmailAddress"
            android:paddingLeft="16dp"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/editText_password"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="90dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:background="@drawable/edittext_shape"
            android:drawableLeft="@drawable/ic_action_lock"
            android:drawableStart="@drawable/ic_action_lock"
            android:drawableRight="@drawable/ic_action_visioff"
            android:drawableEnd="@drawable/ic_action_visioff"
            android:drawablePadding="10dp"
            android:elevation="5dp"
            android:paddingEnd="8dp"
            android:paddingRight="8dp"
            android:hint="@string/phone"
            android:inputType="textPassword"
            android:paddingLeft="16dp"
            android:textSize="15sp" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="150dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">

            <TextView
                android:id="@+id/textView_forgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:text="@string/forgot_password"
                android:gravity="end"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@color/colorAccent" />

        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/login_layer2"
        android:id="@+id/layer_layout2"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/login_layer1"
            android:layout_marginTop="35dp"
            android:id="@+id/layer_layout1"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/button_signin"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:background="@drawable/button_shape"
                android:textColor="@color/colorAccent"
                android:layout_marginTop="30dp"
                android:elevation="10dp"
                android:text="@string/signin" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>